Update copyright years

--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -13,7 +13,7 @@
     <img class="logo" src="../assets/Icon.svg">
     <div>
       <h1>Sardonyx Privacy Policy</h1>
-      <p>Last updated: April 21 2019</p>
+      <p>Last updated: March 2 2020</p>
     </div>
   </div>
 
@@ -33,7 +33,7 @@
       <p>We collect personal information that you voluntarily provide to us when registering at the Sites or Apps, logging in using Managebac, or otherwise contacting us.</p>
       <p>The personal information that we collect depends on the context of your interactions with us and the Site or Apps, the choices you make and the products and features you use. The personal information we collect can include the following:</p>
       <p><strong>Name and Contact Data.</strong> We collect your first and last name, email address, Managebac information, and other similar contact data.</p>
-      <p><strong>Credentials.</strong> We collect passwords, and similar security information used for authentication and account access. <strong>This applies to teacher accounts which are not connected to Managebac only. We do not collect student Managebac passwords.</strong></p>
+      <p><strong>Credentials.</strong> We collect passwords, and similar security information used for authentication and account access.</p>
       <p>All personal information that you provide to us must be true, complete and accurate, and you must notify us of any changes to such personal information.</p>
       <h3>Information automatically collected</h3>
       <p><strong>In short:</strong> Some information – such as IP address, browser and device characteristics, and Managebac data – is collected automatically when you visit our Sites or apps.</p>
@@ -98,7 +98,7 @@
     <div>
       <h2>Your privacy rights</h2>
       <p><strong>In short:</strong> You may review, change, or terminate your account at any time. 
-      <p><strong>Account Information.</strong> If you would at any time like to review or change the information in your account or terminate your account, you can update your Managebac account settings (for student accounts) or update your user account settings (for teacher accounts).
+      <p><strong>Account Information.</strong> If you would at any time like to review or change the information in your account or terminate your account, you can update update your user account settings (for teacher accounts).
       <p>Upon your request to terminate your account, we will deactivate or delete your account and information from our active databases. However, some information may be retained in our files to prevent fraud, troubleshoot problems, assist with any investigations, enforce our Terms of Use and/or comply with legal requirements. 
       <p><strong>Cookies and similar technologies:</strong> Most Web browsers are set to accept cookies by default. If you prefer, you can usually choose to set your browser to remove cookies and to reject cookies. If you choose to remove cookies or reject cookies, this could affect certain features or services of our Sites or Apps.</p>
     </div>
