--- a/public/about/index.html
+++ b/public/about/index.html
@@ -31,7 +31,7 @@
       <h2>About Sardonyx</h2>
       <p>Sardonyx is an online solution to transform how high school students and teachers use technology to manage workloads. Sardonyx offers a cross-platfrom experience for all its users, through its mobile and web platforms.</p>
       <p>The web application offers a group tasklist accessible by both teachers and students. Students and teachers benefit from the transparency of the workload, organized by due dates, subjects, and task categories. Each task on the list can be given a detailed description.</p>
-      <p>The mobile application is planned to offer students and teachers a native experience in managing their online learning environment. This includes an intuitive interface for using Managebac on mobile phones and accessing the Sardonyx group tasklist.</p>
+      <p>The mobile application offers students and teachers a native experience in managing their online learning environment. This includes an intuitive interface for using Managebac on mobile phones and accessing the Sardonyx group tasklist.</p>
     </div>
     <div class="component">
       <h2>CAS</h2>
@@ -52,16 +52,10 @@
       </ul>
       <p>Above information is as of April 2019.</p>
     </div>
-    <div class="component">
-      <h2>Managebac compatibility</h2>
-      <p>Sardonyx and Managebac connect to create a seamless experience for students. Students can log in to Sardonyx using their Managebac credentials, eliminating the need to create separate accounts. The Managebac integration allows Sardonyx to sync tasklists with Managebac's calendar. For our use of Managebac data, please refer to the <a href="/privacy">Privacy Policy</a>.</p>
-      <p>Disclaimer: Sardonyx is not affiliated, associated, authorized, endorsed by, or in any way officially connected with ManageBac, or any of its subsidiaries or its affiliates.</p>
-    </div>
-  </div>
   
   <div id="footer" class="nav columns">
     <div>
-      <p id="copyright">&#169; 2018-2019 SardonyxApp</p>
+      <p id="copyright">&#169; 2018-2020 SardonyxApp</p>
     </div>
     <ul>
       <li><a href="../?redirect=false">Home</a></li>
