Update both the backend and frontend, disabling student features

--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -98,7 +98,7 @@
     <div>
       <h2>Your privacy rights</h2>
       <p><strong>In short:</strong> You may review, change, or terminate your account at any time. 
-      <p><strong>Account Information.</strong> If you would at any time like to review or change the information in your account or terminate your account, you can update update your user account settings (for teacher accounts).
+      <p><strong>Account Information.</strong> If you would at any time like to review or change the information in your account or terminate your account, you can update update your user account settings.
       <p>Upon your request to terminate your account, we will deactivate or delete your account and information from our active databases. However, some information may be retained in our files to prevent fraud, troubleshoot problems, assist with any investigations, enforce our Terms of Use and/or comply with legal requirements. 
       <p><strong>Cookies and similar technologies:</strong> Most Web browsers are set to accept cookies by default. If you prefer, you can usually choose to set your browser to remove cookies and to reject cookies. If you choose to remove cookies or reject cookies, this could affect certain features or services of our Sites or Apps.</p>
     </div>
