--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -13,13 +13,28 @@
     <img class="logo" src="../assets/Icon.svg">
     <div>
       <h1>Sardonyx Changelog</h1>
-      <p>Last updated: April 7 2019</p>
+      <p>Last updated: March 2 2020</p>
     </div>
   </div>
 
   <div id="content">
     <div>
       <h2>Latest version</h2>
+
+      <div>
+        <h3 class="version">v.1.3.0</h3>
+        <p>Released March 2 2020</p>
+        <h3>Breaking changes</h3>
+        <ul>
+          <li>Due to issues with Managebac integration, all features involving Managebac were disabled. This includes auto-sync, student accounts, and Managebac access APIs.</li>
+        </ul>
+        <h3>Miscellaneous</h3>
+        <ul>
+          <li>Updated the privacy policy following the deprecation of student accounts.</li>
+        </ul>
+      </div>      
+
+      <h2>Legacy versions</h2>
 
       <div>
         <h3 class="version">v1.2.0</h3>
@@ -42,8 +57,6 @@
           <li>Migrated from Node.js 8 to Node.js 10</li>
         </ul>
       </div>
-
-      <h2>Legacy versions</h2>
 
       <div>
         <h3 class="version">v1.1.1</h3>
