Follow up commit

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -31,7 +31,7 @@
       <h2>About Sardonyx</h2>
       <p>Sardonyx is an online solution to transform how high school students and teachers use technology to manage workloads. Sardonyx offers a cross-platfrom experience for all its users, through its mobile and web platforms.</p>
       <p>The web application offers a group tasklist accessible by both teachers and students. Students and teachers benefit from the transparency of the workload, organized by due dates, subjects, and task categories. Each task on the list can be given a detailed description.</p>
-      <p>The mobile application offers students and teachers a native experience in managing their online learning environment. This includes an intuitive interface for using Managebac on mobile phones and accessing the Sardonyx group tasklist.</p>
+      <p>The mobile application offers students and teachers a native experience in managing their online learning environment.</p>
     </div>
     <div class="component">
       <h2>CAS</h2>
