--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -30,13 +30,13 @@
       <h2>Information collected by Sardonyx</h2>
       <h3>Personal information you disclose to us</h3>
       <p><strong>In short:</strong> We collect personal information that you provide to us such as name and contact information.</p>
-      <p>We collect personal information that you voluntarily provide to us when registering at the Sites or Apps, logging in using Managebac, or otherwise contacting us.</p>
+      <p>We collect personal information that you voluntarily provide to us when registering at the Sites or Apps, or otherwise contacting us.</p>
       <p>The personal information that we collect depends on the context of your interactions with us and the Site or Apps, the choices you make and the products and features you use. The personal information we collect can include the following:</p>
-      <p><strong>Name and Contact Data.</strong> We collect your first and last name, email address, Managebac information, and other similar contact data.</p>
+      <p><strong>Name and Contact Data.</strong> We collect your first and last name, email address, and other similar contact data.</p>
       <p><strong>Credentials.</strong> We collect passwords, and similar security information used for authentication and account access.</p>
       <p>All personal information that you provide to us must be true, complete and accurate, and you must notify us of any changes to such personal information.</p>
       <h3>Information automatically collected</h3>
-      <p><strong>In short:</strong> Some information – such as IP address, browser and device characteristics, and Managebac data – is collected automatically when you visit our Sites or apps.</p>
+      <p><strong>In short:</strong> Some information – such as IP address, browser, and device characteristics– is collected automatically when you visit our Sites or apps.</p>
       <p>We automatically collect certain information when you visit, use or navigate the Sites or Apps. This information does not reveal your specific identity (like your name or contact information) but may include device and usage information, such as your IP address, browser and device characteristics, operating system, language preferences, referring URLs, device name, information about how and when you use our Sites or Apps and other technical information. This information is primarily needed to maintain the security and operation of our Sites or Apps, and for our internal analytics and reporting purposes.</p>
       <p>We also collect information through cookies and similar technologies.</p>
       <h3>Information collected through our Apps</h3>
@@ -44,15 +44,11 @@
       <p>If you use our Apps, we may also collect the following information:</p>
       <p><strong>Push Notifications.</strong></p>
       <p>We may request to send you push notifications regarding your account or the mobile application. If you wish to opt-out from receiving these types of communications, you may turn them off in your device’s settings.</p>
-      <h3>Information collected from other sources</h3>
-      <p><strong>In short:</strong></p> We may collect data from Managebac and other outside sources.
-      <p>We may obtain information about you from other sources, such as Managebac. Examples of the information we receive from other sources include: Managebac information.</p>
     </div>
     
     <div>
       <h2>Information Sardonyx does not collect</h2>
       <p>We do not collect information from children under 13.</p>
-      <p>We do not collect Managebac passwords.</p>
     </div>
       
     <div>
@@ -60,7 +56,6 @@
       <p><strong>In short:</strong> We process your information for purposes based on legitimate interests, the fulfillment of our contract with you, compliance with our legal obligations, and/or your consent.</p>
       <p>We use personal information collected via our Sites or Apps for a variety of purposes described below. We process your personal information for these purposes in reliance on our legitimate interests, in order to enter into or perform a contract with you, with your consent, and/or for compliance with our legal obligations. We indicate the specific processing grounds we rely on next to each purpose listed below.</p>
       <p>We use the information we collect or receive:</p>
-      <p><strong>To facilitate account creation and logon process.</strong> If you choose to link your account with us to a third party account *(such as your Managebac account), we use the information you allowed us to collect from those third parties to facilitate account creation and logon process.</p>
       <p><strong>To enable user-to-user communications.</strong> We may use your information in order to enable user-to-user communications with each user's consent.</p>
     </div>
 
